# FantasyFootball

./: .gitignore  Player.html  Player.qmd  api.py  app.py  backfill_lineups.R  backfill_stats.R  create_database.py  docker-compose.yml  enigma.py  fbref_dev.ipynb  find_incorrect_schemas.ipynb  get_missing_keeper.py  get_urls.py  join_csvs.py  justfile  load_fbref.py  main.py  model.py  parse_fbref.R  parse_fbref.py  pyproject.toml  requirements.txt  schemas.py  scrape_fbref.py  stats_schema.ipynb  test.py  test_db.py  test_model.py  utils (1).py  utils.py
docs/: check_match_stats.ipynb  fix_raw.ipynb  load_data.ipynb  wage_model.ipynb  wage_model.rmd
src/: parse_match_pages.R  parse_match_pages_2.R
src/bayesball/: cli.py  config.py  db.py  fbref_scraper.py  match_parser.py  models.py  schema.py  utils.py  worldfootballr.py
src/bayesball/extract/: run.py
src/bayesball/ingest/: fbref.py  run.py  wf.py
tests/: test.py  test_db.py  test_fbref_scraper.py  test_model.py  test_worldfootballr_integration.py
tests/data/: Aston-Villa-Brentford-December-4-2024-Premier-League.html  Bochum-Dusseldorf-May-23-2024-German-12-RelegationPromotion-Play-offs.html  Boreham-Wood-Macclesfield-Town-October-6-2020-National-League.html  San-Jose-Earthquakes-Los-Angeles-FC-June-9-2018-Major-League-Soccer.html  Sporting-KC-Portland-Timbers-August-18-2018-Major-League-Soccer.html
tests/ingest/: fbref.py  wf.py
