[project]
name = "fantasyfootball"
version = "0.1.0"
authors = ["jstammers <jimmy.stammers@gmail.com>"]
readme = "README.md"
description = "A library for analysing football stats"
dependencies = [
    "pymc>=5.18.0",
    "rpy2>=3.5.16",
    "shiny>=1.2.0",
    "shinywidgets>=0.3.4",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Scrapy = "^2.11.0"
pymc = "^5.10.3"
pydantic = "^2.6.0"
quarto = "^0.1.0"
shiny = "^0.9.0"
shinywidgets = "^0.3.2"
jupyter = "^1.0.0"
duckdb = "^0.10.2"
itables = "^2.0.0"
plotly = "^5.21.0"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "pytest>=8.3.3",
    "quarto>=0.1.0",
]

#
#[build-system]

