[project]
name = "fantasyfootball"
version = "0.1.0"
authors = [{name = "jstammers", email = "jimmy.stammers@gmail.com"}]
readme = "README.md"
description = "A library for analysing football stats"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ibis-framework[duckdb]>=9.5.0",
    "lxml>=5.3.0",
    "pandera>=0.21.1",
    "polars>=1.16.0",
    "pydantic>=2.9.2",
    "pymc>=5.18.0",
    "requests>=2.31.0",
    "rich>=13.9.4",
    "shiny>=1.2.0",
    "shinywidgets>=0.3.4",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Scrapy = "^2.11.0"
pymc = "^5.10.3"
pydantic = "^2.6.0"
quarto = "^0.1.0"
shiny = "^0.9.0"
shinywidgets = "^0.3.2"
jupyter = "^1.0.0"
duckdb = "^0.10.2"
itables = "^2.0.0"
plotly = "^5.21.0"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "pytest>=8.3.3",
    "quarto>=0.1.0",
]
package = true


[project.scripts]
bb = "bayesball.cli:app"
